# raspberry-as-gige-camera

./: .gitignore  CMakeLists.txt  LICENSE  README.md  command-line-examples.MD  protocol.MD
code/: CMakeLists.txt
code/camera-server/: CMakeLists.txt
code/camera-server/extras/: convert  simple_opencv_cap.cpp
code/camera-server/include/rpiasgige/: tcp_server.hpp
code/camera-server/src/: main.cpp
code/camera-server/src/lib/: usb_interface.cpp
code/client/: CMakeLists.txt
code/client/cpp_api/: CMakeLists.txt  README.md
code/client/cpp_api/examples/: basic.cpp  check_camera_synchronization.cpp
code/client/cpp_api/include/rpiasgige/: client_api.hpp
code/client/cpp_api/libs/googletest/: install.txt
code/client/cpp_api/src/lib/: client_api.cpp
code/client/examples/: basic.cpp  check_camera_synchronization.cpp
code/client/include/rpiasgige/: client_api.hpp
code/client/python_api/: README.md
code/client/python_api/src/: main.py
code/client/python_api/src/examples/: basic.py
code/client/python_api/src/rpiasgige/: client_api.py  test.py  ws_client_api.py
code/client/src/: main.cpp
code/client/src/lib/: client_api.cpp
code/libs/googletest/: CMakeLists.txt.in  install.txt
code/server/: CMakeLists.txt
code/server/extras/: simple_opencv_cap.cpp  usb_camera_test.cpp
code/server/extras/scripts/: adjust_quirks.sh
code/server/include/rpiasgige/: constants.hpp  dumb_logger.hpp  generic_server.hpp  machine_vision_server.hpp  single_channel_server.hpp  tcp_server.hpp  usb_interface.hpp  websocket_server.hpp
code/server/src/: backward.cpp  main.cpp
code/server/src/lib/: usb_interface.cpp
code/server/tests/: single_channel_server_test.cpp  usb_interface_test.cpp
code/tests/: usb_interface_test.cpp
docs/: command-line-examples.MD  cpp_client_tutorial.md  python3_client_tutorial  python3_client_tutorial.md  tutorial.MD
extras/: convert_to_hex.cpp  usb_camera_test.cpp
include/rpi_as_gige/: single_channel_server.hpp  tcp_server.hpp  usb_interface.hpp
include/rpiasgige/: dumb_logger.hpp  single_channel_server.hpp  tcp_server.hpp  usb_interface.hpp
libs/googletest/: install.txt
src/: main.cpp  usb_camera_test.cpp
src/lib/: usb_interface.cpp
tests/: main.cpp  usb_interface_test.cpp
